2005-08-09  Martin Habets  <mhabets@users.sourceforge.net>

	* server.c: Add lo_server_del_method()
	* server_thread.c: Add lo_server_thread_del_method()

2005-06-05  Steve Harris  <steve@plugin.org.uk>

	* server.c: Path from Lorenz Schori to optionally disable IPV6 support
	  with --disable-ipv6

2005-03-31  Steve Harris  <steve@plugin.org.uk>

	* server.c: Patch from Martin Habets that expands wildcarded patch to
	  the matching path where possible (eg. not when using the NULL
	  wildcard path).

2005-03-04  Steve Harris  <steve@plugin.org.uk>

	* server.c: try to fix the global struct thing that keeps track of
	  server sockets.

2005-02-03  Steve Harris  <steve@plugin.org.uk>

	* server.c: made UDP messages resolve back to thier originating server,
	  or something close to it.

2005-02-03  Taybin Rutkin <taybin@earthlink.net>

	* server.c: commited resource leak fix from Jesse Chappell

2005-01-22  Steve Harris  <steve@plugin.org.uk>

	* address.c: fixed bug when determining protocol of URL with
	  unspecified sub-protocol. Reported by Pix.

2005-01-13  Steve Harris  <steve@plugin.org.uk>

	* bundle.c: patch from Dave Robillard that fixes bundles of more than 4
	  messages.

2005-01-13  Steve Harris  <steve@plugin.org.uk>

	* message.c: made the arguments to _add_string and _add_symbol const
	  char * for C++ compatibility.

2005-01-10  Steve Harris  <steve@plugin.org.uk>

	* message.c: added a source field that represents the source from which
	  a message was received. Useful in method handlers to determine which
	  client sent the message.

2004-12-21  Steve Harris  <steve@plugin.org.uk>

	* server.c: added patch from Walco van Loon and Pix that fixes a bug
	  in the hostname detection fallback code

2004-11-19  Steve Harris  <steve@plugin.org.uk>

	* send.c: added lo_send_timestamped()

2004-11-17  Steve Harris  <steve@plugin.org.uk>

	* server.c: added code to handle bundle reception
	* bundle.c: code to build bundle objects